# Pheonix-LabWM

./: .gitmodules  Make.sh  Pheonix-LabWM  Pheonix-LabWM.geany  Pheonix-LabWM.geanywb  README.md  meson.build
src/: ipc.c  layout.c  p-labwm.c
src/include/: config.h  errcodes.h  layout.h  plabwm.h
